2010-03-13  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Logger.hpp: Introducing MLPSolver state into dlvhex.
	* include/dlvhex/State.h: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Throw an exception on not ic stratified program.

	* include/dlvhex/ModuleSyntaxChecker.hpp: Throw an exception on syntax check error.

	* include/dlvhex/ModuleSyntaxChecker.hpp: First approach to incorporate MLPSolver into dlvhex.
	* include/dlvhex/State.h: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

2010-03-12  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Printing AS result without prefix.
	* include/dlvhex/Printer.hpp: Likewise.
	* include/dlvhex/Interpretation.hpp: Likewise.
	* include/dlvhex/Module.hpp: Likewise.
	* include/dlvhex/Logger.hpp: Likewise.
	* src/dlvhex/Interpretation.cpp: Likewise.
	* src/dlvhex/Printer.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/TestMLPSolver.cpp: Fixed some testcases.

	* src/dlvhex/dlvhex.cpp: Adding option --mlp.

	* include/dlvhex/MLPSolver.hpp: Fixed output formatting, minus eliminating prefix.

2010-03-11  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* testsuite/TestMLPSolver.cpp: Adding more examples about disjunctive and naf
	* examples/module-ABBA.hex: Likewise.
	* examples/module-Disjunction.hex: Likewise.
	* examples/module-Negation.hex: Likewise.

	* include/dlvhex/MLPSolver.hpp: Fixing bug about naf in replacedModuleAtoms

2010-03-08  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Converted comp from recursion into loop. 
	* testsuite/TestMLPSolver.cpp: Likewise.
