@@ -1,3 +1,7 @@
+2010-03-15  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
+
+	* include/dlvhex/MLPSolver.hpp: Fixing bug in collecting Answer Set.
+
 2010-03-13  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
 	* include/dlvhex/Logger.hpp: Introducing MLPSolver state into dlvhex.
